<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordChange">

    <!-- Lineas Guía -->

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/mainGLV"/>

    <!-- EditTexts -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edCA"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:helperText="@string/obligatorio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Estilo.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="9"
            style="@style/Estilo.TextInputLayout"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edCN"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:helperText="@string/obligatorio"
        app:layout_constraintTop_toBottomOf="@id/layoutAC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        style="@style/Estilo.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textCN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Estilo.TextInputLayout"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edCC"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:helperText="@string/obligatorio"
        app:layout_constraintTop_toBottomOf="@id/layoutCN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        style="@style/Estilo.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Estilo.TextInputLayout"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botones -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarContra"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mainGLV"
        app:layout_constraintTop_toBottomOf="@id/layoutCC"
        style="@style/Estilo.grisito2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@id/mainGLV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCC"
        style="@style/Estilo.grisito2"/>


</androidx.constraintlayout.widget.ConstraintLayout>