<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Lineas guía -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMainH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <!-- Cabecera -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineMainH"
        style="@style/Estilo.grisitoOscuro"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/avatar"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/materialCard"
        app:layout_constraintEnd_toStartOf="@id/guidelineCardview"
        app:layout_constraintStart_toStartOf="@id/materialCard"
        app:layout_constraintBottom_toBottomOf="@id/materialCard"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textoBienvenida"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/Bienvenida"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/materialCard"
        app:layout_constraintStart_toEndOf="@id/guidelineCardview"
        app:layout_constraintEnd_toEndOf="@id/materialCard"
        app:layout_constraintBottom_toBottomOf="@id/materialCard"/>

    <!-- Cuerpo -->

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineMainH"
        app:cardCornerRadius="16dp"
        style="@style/Estilo.grisitoOscuro">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posicionGlobal"
                android:drawableLeft="@drawable/psi"
                style="@style/Estilo.Button.main"/>

            <Button
                android:id="@+id/btMovimientos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movimientos"
                android:drawableLeft="@drawable/mvi"
                style="@style/Estilo.Button.main"/>

            <Button
                android:id="@+id/btTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transferencias"
                android:drawableLeft="@drawable/tri"
                style="@style/Estilo.Button.main"/>

            <Button
                android:id="@+id/btCambiarPss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cambiarContra"
                android:drawableLeft="@drawable/caconi"
                style="@style/Estilo.Button.main"/>

            <Button
                android:id="@+id/btPromo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promociones"
                android:drawableLeft="@drawable/promoi"
                style="@style/Estilo.Button.main"/>

            <Button
                android:id="@+id/btCajero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cajeros"
                android:drawableLeft="@drawable/caji"
                style="@style/Estilo.Button.main"/>

            <Button
                android:id="@+id/btExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:drawableLeft="@drawable/exi"
                style="@style/Estilo.Button.main"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Pie de app -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fabAlignmentMode="center"
            app:fabAnchorMode="cradle"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="16dp"
            app:fabCradleVerticalOffset="10dp"
            app:hideOnScroll="true"
            app:navigationIcon="@drawable/hamburguesa2"
            android:layout_gravity="bottom"
            style="@style/Estilo.Appbar"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="añadir"
            android:src="@drawable/banco"
            app:borderWidth="0dp"
            app:layout_anchor="@+id/bottomAppBar"
            app:layout_anchorGravity="top|center"
            style="@style/Estilo.fab"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.constraintlayout.widget.ConstraintLayout>