<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Lineas Guia -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <!-- Título -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textoInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IniciarSesion"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Cuadros de texto -->
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edLogIn"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:helperText="@string/obligatorio"
        app:layout_constraintBottom_toTopOf="@id/guidelineH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Estilo.TextInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="9"
            style="@style/Estilo.TextInputLayout"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutContraseA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edPsswd"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:helperText="@string/obligatorio"
        app:layout_constraintTop_toBottomOf="@id/guidelineH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        style="@style/Estilo.TextInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textContraseA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Estilo.TextInputLayout"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Boton incio y salir -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/inicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IniciarSesion"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineV"
        app:layout_constraintTop_toBottomOf="@id/layoutContraseA"
        style="@style/Estilo.grisito2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/guidelineV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutContraseA"
        style="@style/Estilo.grisito2"/>

</androidx.constraintlayout.widget.ConstraintLayout>